Fixed uneven padding on nav-bar

--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -45,6 +45,7 @@
   //width: 100px;
   padding-left: 5px;
   padding-top: 5px;
+  padding-right: 5px;
   margin: 5px;
   text-align: left;
 }
